--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@editorjs/code": "^2.9.4",
+    "@editorjs/editorjs": "^2.31.2",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/image": "^2.10.3",
+    "@editorjs/list": "^2.0.9",
+    "@editorjs/paragraph": "^2.11.7",
+    "@editorjs/quote": "^2.7.6",
     "@hookform/resolvers": "^5.2.2",
     "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-query": "^5.90.20",
