--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@editorjs/code": "^2.9.4",
+    "@editorjs/delimiter": "^1.4.2",
     "@editorjs/editorjs": "^2.31.2",
     "@editorjs/header": "^2.8.8",
     "@editorjs/image": "^2.10.3",
+    "@editorjs/inline-code": "^1.5.2",
     "@editorjs/list": "^2.0.9",
+    "@editorjs/marker": "^1.4.0",
     "@editorjs/paragraph": "^2.11.7",
     "@editorjs/quote": "^2.7.6",
+    "@editorjs/underline": "^1.2.1",
     "@hookform/resolvers": "^5.2.2",
     "@tabler/icons-react": "^3.36.1",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
